# ESP32-C6_lp_core_BME280

./: .cproject  .project  README.md  sdkconfig
main/: CMakeLists.txt  lp_i2c_main.c
main/lp_core/: main.c
main/lp_core/lp_components/bme280/: CMakeLists.txt
